...
            android:layout_marginTop="16dp"
            android:layout_marginLeft="0dp"/>
    </LinearLayout>

    <!-- Reason why for mood -->
    <EditText
        android:id="@+id/edit_reason_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="200"
        android:hint="Reason why for mood" />

    <!-- Select a social situation -->
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:backgroundTint="#FF8E6F"
            android:textColor="#FFFFFF" />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:backgroundTint="#FF8E6F"
            android:textColor="#FFFFFF" />
    </LinearLayout>
...
