<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:icon="@drawable/home_3__streamline_core_svg"
        android:id="@+id/home"

        />

    <item
        android:id="@+id/search"
        android:icon="@drawable/search3" />

    <item
        android:icon="@drawable/baseline_add_circle_outline_42"
        android:id="@+id/add" />

    <item
        android:icon="@drawable/following"
        android:id="@+id/following" />
    <item
        android:id="@+id/map"
        android:icon="@drawable/ic_baseline_map_45" />


</menu>